--- a/src/views/tag.html
+++ b/src/views/tag.html
@@ -151,12 +151,12 @@
         </footer>
     </div>
 
-    <script src="/photowhere/src/js/ApiController.js"></script>
-    <script src="/photowhere/src/js/GeoController.js"></script>
-    <script src="/photowhere/src/js/LocationsController.js"></script>
-    <script src="/photowhere/src/js/PhotoController.js"></script>
-    <script src="/photowhere/src/js/TagController.js"></script>
-    <script src="/photowhere/src/js/endpoint.js"></script>
+    <script charset="utf-8" src="/photowhere/src/js/ApiController.js"></script>
+    <script charset="utf-8" src="/photowhere/src/js/GeoController.js"></script>
+    <script charset="utf-8" src="/photowhere/src/js/LocationsController.js"></script>
+    <script charset="utf-8" src="/photowhere/src/js/PhotoController.js"></script>
+    <script charset="utf-8" src="/photowhere/src/js/TagController.js"></script>
+    <script charset="utf-8" src="/photowhere/src/js/endpoint.js"></script>
 
 
 </body>
